learn/exams/2/ingress/services.k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: store-service
spec:
  selector:
    app: webapp-shop
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: meet-service
spec:
  selector:
    app: webapp-video
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
