learn/exams/2/ingress/ingress.k8s.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-multi-routing
  labels:
    app.kubernetes.io/name: ingress-multi-routing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: meet.rotoro-mail.com
    http:
      paths:
      - pathType: Prefix
        path: "/conference"
        backend:
          service:
            name: meet-service
            port: 
              number: 8080
  - host: store.rotoro-mail.com
    http:
      paths:
        - backend:
            service:
              name: store-service
              port:
                number: 8080
          pathType: Prefix
          path: /shop
